--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
     "@angular/material": "^5.2.1",
+    "@angular/material-moment-adapter": "^6.3.2",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
@@ -30,6 +31,7 @@
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
